--- a/styles/style.css
+++ b/styles/style.css
@@ -232,15 +232,128 @@ html {
 
 /* сердце */
 
-.button-heart {
+/* .like-icon:hover .core {
+  fill: var(--heart-contour);
+  transition: fill 0.3s linear;
+} */
+
+/* .button-heart {
   background-color: transparent;
   border: 0;
 }
 
+
+
+
 .button-heart:hover .core{
   --heart-color-active: black;
   transition: --heart-color-active 3.3s ease;
+} */
+
+
+@keyframes moving {
+  from {
+    inset-inline-start: -20px;
+  }
+
+  to {
+    inset-inline-start: -16px;
+  }
 }
+
+
+@keyframes rising {
+  from {
+    scale: 1;
+  }
+
+  to {
+    scale: 1.5;
+  }
+}
+
+@keyframes sparks {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+
+
+.contour {
+  fill: var(--heart-contour);
+  transition: fill 0.1s linear;
+}
+
+
+.main-body {
+  fill: transparent;
+  transition: fill 0.3s linear;
+}
+
+.core {
+  fill: transparent;
+  transition: fill 0.3s 0.03s linear;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+
+.like-icon:hover .core {
+  fill: var(--heart-contour);
+  transition: fill 0.3s linear;
+}
+
+
+.like-icon:hover .main-body {
+  fill: var(--heart-contour);
+  transition: fill 0.3s 0.05s linear;
+}
+
+
+.like-icon:active .core {
+  fill: var(--heart-fill);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+  fill: var(--heart-fill);
+  transition: fill 0.3s 0.05s linear;
+}
+
+
+
+.like-icon.is-liked {
+  transform-origin: center;
+  animation: rising 0.3s 0.1s ease-in alternate;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--heart-fill);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-fill);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--heart-fill);
+  transition: fill 0.3s 0.06s linear;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s 0.3s ease-in alternate;
+}
+
+
 
 /* .card-content:hover {
   background-color: black;
