--- a/styles/style.css
+++ b/styles/style.css
@@ -226,9 +226,12 @@ html {
 
 .card-content__buttons {
  display: flex;
- gap: 12px;
+ /* gap: 12px; */
  align-self: end;
+ align-items: center;
 }
+
+
 
 /* сердце */
 
@@ -250,6 +253,31 @@ html {
   transition: --heart-color-active 3.3s ease;
 } */
 
+/* Кнопка */
+
+.card-button {
+  background-color: transparent;
+  border-color: transparent;
+  
+
+}
+
+/* Кнопка с текстом */
+
+.card__like-button {
+  border: 2px solid #000000 ;
+  width: 130px;
+  height: 38px;
+}
+
+.button__text {
+  font-family: var(--huge-title-font);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Анимации */
 
 @keyframes moving {
   from {
